fix(tab-bar): support dark mode properly

--- a/src/components/tab-bar/tab-bar.scss
+++ b/src/components/tab-bar/tab-bar.scss
@@ -122,9 +122,20 @@ $tab-scroller-fade-width: 65;
     gap: functions.pxToRem(6);
 }
 
-.mdc-tab__text-label {
-    // MDC adds a padding left of 8px using `.mdc-tab:not(.mdc-tab--stacked) .mdc-tab__icon+.mdc-tab__text-label`.
-    // The `mdc-tab--stacked` is nothing we use. So,
-    // for simplicity, we make it `!important` to override that.
-    padding-left: 0 !important;
+.mdc-tab {
+    .mdc-tab__text-label {
+        transition: color 0.2s ease;
+        padding-left: 0 !important;
+        color: var(--mdc-theme-on-surface);
+    }
+    &:hover {
+        .mdc-tab__text-label {
+            color: var(--mdc-theme-text-primary-on-background);
+        }
+    }
+    &.mdc-tab--active {
+        .mdc-tab__text-label {
+            color: var(--mdc-theme-primary);
+        }
+    }
 }
